--- a/templates/new_team.html
+++ b/templates/new_team.html
@@ -3,4 +3,7 @@
 {% block body %}
 <p>The team you're attempting to add in our database is from a competition that we don't automatically import and hasn't
 been added in the past. As a result, you're going to need to provide us with some info on the team. </p>
+    <form class="ui form">
+
+    </form>
 {% endblock %}
