Fix Contact Link in Footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <div class="ui center aligned container">
       <img src="{% static 'img/RoboGearTrade.svg' %}" class="ui centered tiny image">
       <div class="ui horizontal inverted small divided link list">
-        <a class="item" href="{% url 'contact' %} %}">Contact Us</a>
+        <a class="item" href="{% url 'contact' %}">Contact Us</a>
         <a class="item" href="{% url 'terms' %}">Terms and Conditions</a>
         <a class="item" href="#">Privacy Policy</a>
       </div>
