--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,5 +1,6 @@
 {% extends "static_header.html" %}
 {% load static %}
+{% load semanticui %}
 {% block body %}
     <script src="{% static 'jquery.address.js' %}"></script>
     <script>
@@ -226,6 +227,12 @@
             </div>
             <div class="ui tab segment" data-tab="profile">
                 <h1>Profile</h1>
+                <p>Your avatar is automatically generated from your <a href="https://en.gravatar.com/">Gravatar</a>. Go to the linked site to change your avatar.</p>
+                <form class="ui form" action="{% url 'updateDesc' %}" method="POST">
+                    {% csrf_token %}
+                    {% render_form desc_form %}
+                    <input type="submit" class="ui button" value="Submit">
+                </form>
             </div>
         </div>
     </div>
