--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -6,7 +6,7 @@
         <div class="four wide column">
             <div class="ui card">
                 <div class="image">
-                    <img src="{{ user|gravatar:"300" }}">
+                    <img src="{{ user.avatar.url }}">
                 </div>
                 <div class="content">
                     <div class="header">{{ user.username }}</div>
