--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -1,28 +1,27 @@
 {% extends "static_header.html" %}
-{% load app_tags %}
 {% load humanize %}
 {% block body %}
     <div class="ui stackable two column grid">
         <div class="four wide column">
             <div class="ui card">
-                {% if user.avatar %}
+                {% if user_profile.avatar %}
                 <div class="image">
-                    <img src="{{ user.avatar.url }}">
+                    <img src="{{ user_profile.avatar.url }}">
                 </div>
                 {% endif %}
                 <div class="content">
-                    <div class="header">{{ user.username }}</div>
+                    <div class="header">{{ user_profile.username }}</div>
                     <div class="meta">
-                        <span class="date">Joined in {{ user.date_joined|date:"Y" }}</span>
+                        <span class="date">Joined in {{ user_profile.date_joined|date:"Y" }}</span>
                     </div>
                     <div class="meta">
-                        <span class="date">Last seen {{ user.last_login|naturaltime}}</span>
+                        <span class="date">Last seen {{ user_profile.last_login|naturaltime}}</span>
                     </div>
                     <div class="description">
-                        {{user.description}}
+                        {{user_profile.description}}
                     </div>
                 </div>
-                {% for membership in user.teammembership_set.all %}
+                {% for membership in user_profile.teammembership_set.all %}
                 <a href="{% url 'teamDetail' membership.team.competition.abbreviation membership.team.team_num %}" class="extra content">
                         <div class="header">{{ membership.team.nickname }}</div>
                         <div class="meta">
@@ -31,6 +30,12 @@
                         </div>
                 </a>
                 {% endfor %}
+                {% if perms.users.edit_user %}
+                    <a class="ui button" href="{%  url 'admin:users_user_change' user.pk %}">Edit User</a>
+                {% endif %}
+                {% if request.user == user_profile %}
+                    <a class="ui button" href="{%  url 'settings' %}#/profile">Edit Profile</a>
+                {% endif %}
             </div>
         </div>
         <div class="twelve wide column">
