--- a/templates/team_detail.html
+++ b/templates/team_detail.html
@@ -1,5 +1,4 @@
 {% extends "static_header.html" %}
-{% load app_tags %}
 {% load humanize %}
 {% block body %}
     <div class="ui stackable two column grid">
@@ -19,7 +18,12 @@
                 </div>
                 {% for user in team.users.all %}
                 <a href="{% url 'userDetail' user.username %}" class="extra content">
-                        <div class="header">{{ user.username }}</div>
+                        <div class="header">
+                            {% if user.avatar %}
+                                <img class="ui avatar image" src="{{ user.avatar.url }}">
+                            {% endif %}
+                            {{ user.username }}
+                        </div>
                         <div class="meta">
                           <span>Last seen {{ user.last_login|naturaltime}}</span>
                         </div>
