Add Queue, update Event Model, update header

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -80,7 +80,7 @@
     </script>
     <div class="ui stackable two column divided grid">
         <div class="two wide column">
-            <div class="ui fluid secondary vertical menu">
+            <div class="ui fluid secondary vertical pointing menu">
                 <a class="item SettingsItem" data-tab="main">Settings</a>
                 <a class="item SettingsItem" data-tab="teams">Teams</a>
                 <a class="item SettingsItem" data-tab="profile">Profile</a>
