--- a/templates/static_header.html
+++ b/templates/static_header.html
@@ -15,13 +15,99 @@
             padding: 2em 0em;
         }
     </style>
+    <script>
+        $(document)
+            .ready(function () {
+                $('.ui.dropdown')
+                    .dropdown({
+                        on: 'hover'
+                    })
+                ;
+                $('.browse.item')
+                    .popup({
+                        inline: true,
+                        hoverable: true,
+                        position: 'bottom center',
+                        delay: {
+                            show: 100,
+                            hide: 800
+                        },
+                        exclusive: true
+                    })
+                ;
+                $('.new.item')
+                    .popup({
+                        inline: true,
+                        hoverable: true,
+                        position: 'bottom center',
+                        delay: {
+                            show: 100,
+                            hide: 800
+                        },
+                        exclusive: true
+                    })
+                ;
+            })
+        ;
+    </script>
     <div class="ui top fixed inverted menu">
         <a href="/" class="header item">
             <img class="logo" id="header-logo" src="{% static 'img/RoboGearTrade.svg' %}">
         </a>
         <div class="right menu">
             {% if user.is_authenticated %}
-                <div class="ui simple dropdown item">
+            <a class="new item">
+                New
+                <i class="dropdown icon"></i>
+            </a>
+            <div class="ui popup transition hidden">
+                <div class="ui link list">
+                    <a class="item">Need</a>
+                    <a class="item">Want</a>
+                    <a class="item">Have</a>
+                </div>
+            </div>
+            {% endif %}
+            <a class="browse item">
+                Browse
+                <i class="dropdown icon"></i>
+            </a>
+            <div class="ui fluid popup bottom right transition hidden">
+                <div class="ui three column relaxed equal height dividied grid">
+                    <div class="column">
+                        <h4 class="ui header">Posts by type</h4>
+                        <div class="ui link list">
+                            <a class="item">Need</a>
+                            <a class="item">Want</a>
+                            <a class="item">Have</a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h4 class="ui header">Posts by kind</h4>
+                        <div class="ui link list">
+                            <a class="item">Robot parts</a>
+                            <a class="item">Apparel</a>
+                            <a class="item">Other</a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h4 class="ui header">Other things to browse</h4>
+                        <div class="ui link list">
+                            <a class="item">Teams</a>
+                            <a class="item">Events</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ui right aligned category search item">
+                <div class="ui transparent icon input">
+                    <input class="prompt" type="text" placeholder="Search robotgear...">
+                    <i class="inverted search link icon"></i>
+                </div>
+                <div class="results"></div>
+            </div>
+            {% if user.is_authenticated %}
+                <div class="ui dropdown item">
                     {% if user.avatar %}
                     <img class="ui avatar image" src="{{ user.avatar.url }}">
                     {% endif %}
@@ -37,5 +123,6 @@
                 <a href="{% url 'login' %}" class="item">Log in</a>
             {% endif %}
         </div>
+
     </div>
 {% endblock %}
