Add docker container

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "static_header.html" %}
 {% block body %}
     <h1 class="ui header">Semantic UI Fixed Template</h1>
-    <p>This is RobotGear.</p>
+    <p>This is RobotGear. Test.</p>
 {% endblock %}
